# XAS-Data-Interchange

./: .gitignore  README  README.md  README.org  grammar  magic
baddata/: BadFiles.txt  bad_01.xdi  bad_02.xdi  bad_09.xdi  bad_13.xdi  bad_14.xdi  bad_16.xdi  bad_17.xdi  bad_19.xdi  bad_22.xdi  bad_23.xdi  bad_25.xdi  bad_26.xdi  bad_27.xdi  bad_28.xdi  bad_29.xdi  bad_30.xdi  bad_31.xdi  bad_32.xdi  bad_33.xdi  bad_34.xdi  bad_35.xdi
binaries/linux-x86/: xdi_reader
binaries/macosx/: libxdifile.dylib  xdi_reader
c/: Makefile.in  README.md  config.h  configure  errors.h  strutil.c  strutil.h  test_valgrind.pl  xdi_example1.c  xdi_reader.c  xdi_tokens.h  xdifile.c  xdifile.h
data/: bad_03.xdi  bad_04.xdi  bad_05.xdi  bad_06.xdi  bad_07.xdi  bad_08.xdi  bad_10.xdi  bad_11.xdi  bad_12.xdi  bad_13.xdi  bad_14.xdi  bad_15.xdi  bad_18.xdi  bad_20.xdi  bad_21.xdi  bad_24.xdi  bad_29.xdi  co_metal_rt.xdi  cu_10k.xmu  cu_metal_10K.xdi  fe_aps10id.xdi  fe_metal_rt.xdi  fen_rt.xdi  feo_rt1.xdi  nonxafs_negvalues.xdi  pt_metal_rt.xdi  se_znse_rt.xdi  zn_znse_rt.xdi
doc/Poster_XAFS15/: XDI_Poster.tex  beamerthemeXDI.sty
filemagic/: README.md  install_magic  xdi.reg
fortran/: Makefile  reconf  str_util.f  test.xdi  xdi_example1.f  xdifile.f
fortran/Autoconf_work/: Makefile  Makefile.in  config.h  config.status  configure
fortran/Autoconf_work/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
languages/fortran/: Makefile.in  configure  configure.in  xdi_example1.f
languages/perl/: LICENSE  MANIFEST  MANIFEST.SKIP  README.org
languages/perl/example/: xdi_reader.pl
languages/perl/lib/Xray/: XDI.pm  XDIFile.pm
languages/perl/lib/Xray/XDI/: WriterPP.pm
languages/perl/t/: 00_base.t  01_moose_nonmoose.t  02_moosish.t  03_nofile.t  04_validation.t
languages/perl/t/baddata/: 01_no_xdi_line.t  02_no_edge.t  03_no_symbol.t  06_no_minus_signs.t  07_columns.t  11_bad_comment_char.t  12_no_dspacing.t  13_inconsistent_columns.t  15_nonnumeric.t  18_headers.t  25_things_missing.t  28_datatime.t
languages/perl/t/gooddata/: 01_cu_metal_10k.t  02_cu_metal_rt.t  03_fe2o3.t  04_fe3c_rt.t  05_fe_metal_rt.t  06_fen_rt.t  07_feo_rt1.t  08_ni_metal_rt.t  09_pt_metal_rt.t  10_se_na2so4_rt.t  11_se_znse_rt.t  12_zn_na2so4_rt.t
languages/perl/t/writer/: 01_pp.t
languages/python/: INSTALL  setup.py
languages/python/lib/: __init__.py
languages/python/tests/: test1.py
languages/python/xdifile/: __init__.py  xdi.py
latex/: background.tex  spec.md  wrappedspec.tex  xdi.sty  xdi.tex
lib/: LICENSE  Makefile.am  Makefile.in  README.md  configure.ac  configure.in  libxdifile.pc.in  strutil.c  strutil.h  test_valgrind.pl  writetest.c  xdi_reader.c  xdifile.c  xdifile.h
perl/: Build.PL  Changes  INSTALL  MANIFEST  MANIFEST.SKIP  Makefile.PL  README.org
perl/example/: create.pl  grammar.pl  serialize.pl  xdac.pl
perl/lib/Xray/: XDI.pm  XDIFile.pm
perl/lib/Xray/XDI/: Version1_0.pm  WriterPP.pm  XDAC.pm
perl/lib/Xray/XDI/Alien/: MX.pm  XDAC.pm
perl/t/: 00_base.t  01_moose_nonmoose.t  02_moosish.t  03_nofile.t  test.t  xdi.aps10id
perl/t/baddata/: 01_no_xdi_line.t  02_no_edge.t  03_no_symbol.t  06_no_minus_signs.t  07_columns.t  11_bad_comment_char.t  12_no_dspacing.t  13_inconsistent_columns.t  15_nonnumeric.t  18_headers.t  25_things_missing.t  28_datatime.t  99_coverage.t  test_coverage.sh
perl/t/gooddata/: 01_cu_metal_10k.t  02_cu_metal_rt.t  03_fe2o3.t  04_fe3c_rt.t  05_fe_metal_rt.t  06_fen_rt.t  07_fe0_rt1.t  07_feo_rt1.t  08_ni_metal_rt.t  09_pt_metal_rt.t  10_se_na2so4_rt.t  11_se_znse_rt.t  12_zn_na2so4_rt.t
perl/t/writer/: 01_pp.t
python/: setup.py
python/lib/: __init__.py  ctypes_testing.py  xdi.py  xdi_ctypes.py
python/tests/: cu_rt01.xdi  test1.py
specification/: README.md  background.md  dictionary.md  maketex.sh  questions.md  spec.md  wrappedbackground.tex  wrappedspec.tex  xdi.sty  xdi_background.tex  xdi_dictionary.tex  xdi_spec.tex
