# Copyright (C) 2000 Matt Newville <newville@cars.uchicago.edu>
#
# This file is free software; the author gives unlimited permission 
# to copy and/or distribute it, with or without modifications, as 
# long as this notice is preserved.
#
AC_INIT(XDIFile Library, 0.1.0, newville@cars.uchicago.edu)
AM_INIT_AUTOMAKE(xdilib, 0.1.0)
AC_PROG_CC(gcc cc )
AC_PROG_CPP(gcc cc)
AM_CONFIG_HEADER(config.h)
AC_ISC_POSIX
AC_PROG_RANLIB
AC_OUTPUT([Makefile])
