# Copyright (C) 2000 Matt Newville <newville@cars.uchicago.edu>
#
# This file is free software; the author gives unlimited permission 
# to copy and/or distribute it, with or without modifications, as 
# long as this notice is preserved.
#
AC_INIT(XDI Library, 0.1.0, newville@cars.uchicago.edu)
AM_INIT_AUTOMAKE(xdilib,0.1.0)
AC_PROG_CC(gcc cc )
AC_PROG_CPP(gcc cc)
AM_CONFIG_HEADER(config.h)
AC_ISC_POSIX
AC_PROG_RANLIB

################################
FCLIST='gfortran g95 g77 f90 f77'
AC_ARG_WITH(fortran, 
            [ --with-fortran=compiler specify fortran compiler g77 g95 gfortran],  
	    [if test "$withval"; then  FCLIST=$withval; fi])

AC_PROG_F77($FCLIST)
AC_F77_LIBRARY_LDFLAGS
AC_OUTPUT([Makefile])
